# quiero_ver_manga

./: .gitignore  Dockerfile  capitulos.json  conectar.py  config.py  consulta_datos.py  db.py  main.py  manejo_datos.py  mensajes.py  models.py  procesar_html.py  pyproject.toml  regis.db  rpmako_ssh
controllers/: consulta_datos.py  guardar_datos.py
db_models/: models.py
scraping/: conectar.py  procesar_html.py
