[tool.poetry]
name = "quiero_ver_manga"
version = "0.1.0"
description = "app para ver mangas"
authors = ["javier arroyo"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"
SQLAlchemy = "^1.4.37"
scheduler = "^0.7.4"
python-telegram-bot = "^13.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
